correcciones para preentrega

--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -11,41 +11,35 @@ main{
          }
      } 
      
-     .populares {  
+     .populares {
         @include pad-mar;
-            h3 {
-           @extend %subtitulo;
-            font-size: $tittle-size;
-         }
-         .card-cont{
-            padding-bottom: 1.25rem;
-            .card{
-                .card-img-top {
-                    height: 31.25rem;
-                    object-fit:cover;
-                  }
-                .card-body{
-                    background-color: #3F7C17;
-                    // height: 10.625rem;
-                }
+        h2 {
+          @extend %subtitulo;
+        }
+        .card-cont {
+          padding-bottom: 1.25rem;
+          .card {
+            .card-img-top {
+              height: 31.25rem;
+              object-fit: cover;
+            }
+            .card-body {
+              background-color: #3f7c17;
+              a {
+                color: black;
+                background-color: #3f7c17;
+              }
             }
           }
         }
-
-     .medidas {
-      @include pad-mar;
-        h3{
-            font-size: $tittle-size;
+      }
+    
+      .medidas {
+        @include pad-mar;
+          h2 {
+            @extend %subtitulo;
+          }
         }
-        .balanza{
-            height: 42.5rem;
-            object-fit: scale-down;
-        }
-     }
-
-
-
-
-
-
+    
+    
     }
