--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -6,5 +6,4 @@
   body {
       /* background-color: #E9E9D0; */
       background-color: #CECEB5;
-      font-family: 'Dancing Script', cursive;
-  }
+      font-family: 'Montserrat', sans-serif;  }
